--- a/.github/workflows/mod-module-example-ci.yaml
+++ b/.github/workflows/mod-module-example-ci.yaml
@@ -26,8 +26,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-#                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
-                dagversion: [0.12.3]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
         name: Lint module-example on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -36,7 +35,8 @@ jobs:
               with:
                   go-version: ${{ matrix.go }}
             - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
+#              uses: dagger/dagger-for-github@v6
+              uses: dagger/dagger-for-github@747585b2454aebd42233a2c1d5102ca88abb2223 # v6.0.0
               with:
                   verb: develop
                   module: module-example
