chore: regenerated module

--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -1,15 +1,15 @@
 ---
-name: gotest CI 🧹
+name: module-template CI 🧹
 on:
     push:
         branches:
             - main
             - master
         paths:
-            - gotest/**/*.go
+            - module-template/**/*.go
     pull_request:
         paths:
-            - gotest/**/*.go
+            - module-template/**/*.go
     workflow_dispatch:
 
 permissions:
@@ -19,7 +19,7 @@ permissions:
 
 defaults:
     run:
-        working-directory: gotest
+        working-directory: module-template
 
 jobs:
     dagger-linter:
@@ -27,7 +27,7 @@ jobs:
             matrix:
                 go: ['1.22']
                 dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
-        name: Lint gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -46,16 +46,15 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
             - name: Dagger Develop on Examples Module for Go 📄 with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -64,7 +63,7 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
-                  module: gotest
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -72,16 +71,15 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
-                  module: gotest/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
             - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -90,63 +88,66 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-        name: GolangCI-Lint for gotest
+        name: GolangCI-Lint for module-template
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
                   go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 gotest with Dagger ${{ matrix.dagversion }}
+
+      # Dagger main module 📦 (develop & golang ci-lint)
+            - name: Dagger Develop on Module 📦 module-template with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on gotest 📦
+            - name: Run golangci-lint on module-template 📦
               uses: golangci/golangci-lint-action@v6
               with:
                   version: v1.58
-                  args: --config .golangci.yml ./gotest
+                  args: --config .golangci.yml ./module-template
 
-            - name: Dagger Develop on Module tests 🧪 gotest with Dagger ${{ matrix.dagversion }}
+      # Dagger test module 🧪 (develop & golang ci-lint)
+            - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on gotest/tests 🧪
+            - name: Run golangci-lint on module-template/tests 🧪
               uses: golangci/golangci-lint-action@v6
               with:
                   version: v1.58
-                  args: --config .golangci.yml ./gotest/tests
+                  args: --config .golangci.yml ./module-template/tests
 
-            - name: Dagger Develop on Module Examples/Go 📄 gotest with Dagger ${{ matrix.dagversion }}
+      # Dagger examples (go) module 📄 (develop & golang ci-lint)
+            - name: Dagger Develop on Module Examples/Go 📄 module-template with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Run golangci-lint on gotest/examples/go 📄
+            - name: Run golangci-lint on module-template/examples/go 📄 (develop & golang ci-lint)
               uses: golangci/golangci-lint-action@v6
               with:
                   version: v1.58
-                  args: --config .golangci.yml ./gotest/examples/go
+                  args: --config .golangci.yml ./module-template/examples/go
 
     module-test:
         strategy:
             matrix:
                 go: ['1.22']
                 dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
-        needs: [linter, golangci-lint]
-        name: Run Tests 🧪 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        needs: [dagger-linter, golangci-lint]
+        name: Run Tests 🧪 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -157,7 +158,7 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest
+                  module: module-template
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -165,27 +166,27 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Tests 💣 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
                   args: test-all
-                  module: gotest/tests
+                  module: module-template/tests
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    module-examples-go:
+    module-templates-go:
         strategy:
             matrix:
                 go: ['1.22']
                 dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
-        needs: [linter, golangci-lint]
-        name: Run recipes 🥗 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        needs: [dagger-linter, golangci-lint]
+        name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -196,35 +197,35 @@ jobs:
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Recipes create container 💣 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Recipes create container 💣 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
                   args: create-container
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Running Recipes passed env vars 💣 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Recipes passed env vars 💣 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
                   args: passed-env-vars
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Recipes run-arbitrary-command 💣 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Recipes run-arbitrary-command 💣 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
                   args: run-arbitrary-command
-                  module: gotest/examples/go
+                  module: module-template/examples/go
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
