--- a/.daggerx/daggy/Cargo.toml
+++ b/.daggerx/daggy/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 clap = { version = "4.5.7", features = ["derive"] }
 serde = { version = "1.0.203", features = ["derive"] }
 regex = "1.10.5"
+serde_json = "1.0.121"
